club_locator.css
.c-map__main-div {
  color:#404040;
  font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
  margin:0;
  padding:0;
  -webkit-font-smoothing:antialiased;
  display:flex;
}

* {
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
}

.c-map__sidebar {
  width:33.3333%;
  height:100%;
  overflow:hidden;
  border-right:1px solid rgba(0,0,0,0.25);
}
.pad2 {
  padding:20px;
}

.c-map__map {
  width:66.6666%;
  height:100%
}

.c-map__main-div h1 {
  font-size:22px;
  margin:0;
  font-weight:400;
  line-height: 20px;
  padding: 20px 2px;
}

.c-map__main-div a {
  color:#404040;
  text-decoration:none;
}

.c-map__main-div a:hover {
  color:#0e5959;
}

.c-map__sidebar-heading {
  background:#fff;
  border-bottom:1px solid #eee;
  min-height:60px;
  line-height:60px;
  padding:0 10px;
  background-color: #000;
  color: #fff;
}

.c-map__sidebar-listings {
  height:100%;
  overflow:auto;
  padding-bottom:60px;
}

.c-map__sidebar-listings .item {
  display:block;
  border-bottom:1px solid #eee;
  padding:10px;
  text-decoration:none;
}

.c-map__sidebar-listings .item:last-child { border-bottom:none; }
.c-map__sidebar-listings .item .title {
  display:block;
  color:#951818;
  font-weight:700;
}

.c-map__sidebar-listings .item .title small { font-weight:400; }
.c-map__sidebar-listings .item.active .title,
.c-map__sidebar-listings .item .title:hover { color:#0e5959; }
.c-map__sidebar-listings .item.active {
  background-color:#f8f8f8;
}
::-webkit-scrollbar {
  width:3px;
  height:3px;
  border-left:0;
  background:rgba(0,0,0,0.1);
}
::-webkit-scrollbar-track {
  background:none;
}
::-webkit-scrollbar-thumb {
  background:#951818;
  border-radius:0;
}

.c-map__marker {
  border: none;
  cursor: pointer;
  height: 56px;
  width: 56px;
  background-image: url(markersmall.png);
  background-color: rgba(0, 0, 0, 0);
}

.clearfix { display:block; }
.clearfix:after {
  content:'.';
  display:block;
  height:0;
  clear:both;
  visibility:hidden;
}

/* Marker tweaks */
.mapboxgl-popup {
  padding-bottom: 50px;
}

.mapboxgl-popup-close-button {
  display:none;
}
.mapboxgl-popup-content {
  font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
  padding:0;
  width:180px;
}
.mapboxgl-popup-content-wrapper {
  padding:1%;
}
.mapboxgl-popup-content h3 {
  background:#0e5959;
  color:#fff;
  margin:0;
  display:block;
  padding:10px;
  border-radius:3px 3px 0 0;
  font-weight:700;
  margin-top:-15px;
}

.mapboxgl-popup-content h4 {
  margin:0;
  display:block;
  padding: 10px 10px 10px 10px;
  font-weight:400;
}

.mapboxgl-popup-content div {
  padding:10px;
}

.mapboxgl-container .leaflet-marker-icon {
  cursor:pointer;
}

.mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
  margin-top: 15px;
}

.mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
  border-bottom-color: #91c949;
}

